adding a creator main

--- a/resources/dev/web/creator_worth.html
+++ b/resources/dev/web/creator_worth.html
@@ -135,6 +135,7 @@
          <span class="badge" id="slide-submenu"><i class="fa fa-times"></i></span>
        </li>
 
+       <a class="list-group-item" href="creator_main" rel="keep-params"><i class="fa fa-bar-chart-o"></i> Main</a>
        <a class="list-group-item" href="creator_pricing" rel="keep-params"><i class="fa fa-bar-chart-o"></i> Price</a>
        <a class="list-group-item active" href="creator_worth" rel="keep-params"><i class="fa fa-table"></i> Worth</a>
        <a class="list-group-item" href="creator_rewards" rel="keep-params"><i class="fa fa-edit"></i> Rewards</a>
